--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,9 @@
 <script src="https://careemplus.com/public/site/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <style>
-    
+  a{
+    text-align: center;
+  }
   @media  screen and (min-width: 600px) {
     .inline-slide-image-style{
       padding: 150px!important;
