--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <script src="https://careemplus.com/public/site/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <style>
+  a{
+    text-align: center;
+  }
     
   @media  screen and (min-width: 600px) {
     .inline-slide-image-style{
@@ -252,8 +255,14 @@
 
        	<a href="rent.html"><h4  class="title" style="margin: 0!important; color: #FFFFFF;font-size: 19px !important; ">
 
-       	 للتسجيل بدون سيارة اضغط هنا </h4></a>
+          للتسجيل بدون سيارة اضغط هنا </h4></a>
 
+      </div>
+      <div class="mt-4"></div>
+      <div class="box2">
+        <a href="rent2.html"><h4  class="title" style="margin: 0!important; color: #FFFFFF;font-size: 19px !important; ">
+
+          للانضمام لوكلاء كريم</h4></a>
       </div>
 
     </div>
