--- a/rent2.html
+++ b/rent2.html
@@ -117,7 +117,7 @@
 
               <div class="formBody">
 
-                <p style="font-size: 16px;color: #37b44e;text-align: center;font-weight: 600;"> يمكنك ان تصبح كابتن في كريم ولكن عليك بمليء الاستمارة جيدا وقراءة جميع التفاصيل بدقة لان كريم تهتم باختيار افضل الكباتن للانضمام لمنصة كريم </p>
+                <p style="font-size: 16px;color: #37b44e;text-align: center;font-weight: 600;"> يمكنك ان تصبح وكيل لشركة كريم ولكن عليك بمليء الاستمارة جيدا وقراءة جميع التفاصيل بدقة لان كريم تهتم باختيار افضل الوكلاء للانضمام لمنصة كريم </p>
 
               </div>
 
@@ -187,6 +187,16 @@
               <div class="col-lg-12">
 
                 <input class="form-control" placeholder="الإيميل ( إختياري )" type="text" name="email">
+
+              </div>
+
+              <div class="col-lg-12">
+
+                <div class="formBody">
+
+                  <input placeholder="عنوان المكتب الحالي (اختياري)"  class="form-control" type="text">
+
+                </div>
 
               </div>
 
@@ -296,7 +306,7 @@ top: 0px;position: absolute;font-size: 17px;"></i> </span> <span class="upload-f
 
                   <input class="upload-button" type="file" name="experience_certification" id="experience_certification"/>
 
-                  <label class="upload-label" for="experience_certification">اذا كان لديك شهاده خبره او خطاب من جهه عملك الحاليه او السابقه او اى شهاده رياضيه قد حققتها فى وقت سابق (برجاء ارفاقها هنا )او قومت بالعمل فى احدى شركات النقل التشاركية </label>
+                  <label class="upload-label" for="experience_certification">اذا كان لديك شهاده خبره في نفس المجال او مجال النقل التشاركي ويرجي ارفاق صورة من السجل التجاري والبطاقة الضريبية ان وجدت. </label>
 
                   <i class="fas fa-camera" style="left:5px;
 
@@ -314,7 +324,7 @@ top: 0px;position: absolute;font-size: 17px;"></i> </span> <span class="upload-f
 
                     <div class="formBody">
 
-                      <button type="submit" id="sign" class="rsform-button-next rsform-button" onclick=""> سجل الان سائق بدون سيارة</button>
+                      <button type="submit" id="sign" class="rsform-button-next rsform-button" onclick=""> سجل الان وكيل لشركة كريم</button>
 
                     </div>
 
